# allgreen

./: Cargo.toml  README.md  db.sql  deploy.sh  log.sh
assets/: style.css
src/: appconfig.rs  checker.rs  domain_checker.rs  logged_user.rs  main.rs  models.rs
src/app/: auth.rs  home.rs  layout.rs  logo.rs  mail.rs  mod.rs  website.rs
